update html message

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                 Application Maintenance
             </h1>
             <p>
-                The Unity Grant Manager (UGM) is being upgraded will be back online in a few minutes.
+                The Unity Grant Management System is undergoing maintenance and will be back online in a few minutes.
+            </p>
+            <p style="font-size:85%">
+                Please reach out to your support team if you have any questions 
             </p>
         </div>
     </div>
